include/graphics.h

#include "defines.h"

af_err af_create_window(af_window *out, const int width, const int height, const char* const title);
af_err af_set_position(const af_window wind, const unsigned x, const unsigned y);
af_err af_set_title(const af_window wind, const char* const title);
af_err af_set_size(const af_window wind, const unsigned w, const unsigned h);
af_err af_draw_image(const af_window wind, const af_array in, const af_cell* const props);
af_err af_draw_plot(const af_window wind, const af_array X, const af_array Y, const af_cell* const props);
af_err af_draw_plot3(const af_window wind, const af_array P, const af_cell* const props);
af_err af_draw_plot_nd(const af_window wind, const af_array P, const af_cell* const props);
af_err af_draw_plot_2d(const af_window wind, const af_array X, const af_array Y,const af_cell* const props);
af_err af_draw_plot_3d(const af_window wind,const af_array X, const af_array Y, const af_array Z,const af_cell* const props);
af_err af_draw_scatter(const af_window wind, const af_array X, const af_array Y, const af_marker_type marker, const af_cell* const props);
af_err af_draw_scatter3(const af_window wind, const af_array P, const af_marker_type marker, const af_cell* const props);
af_err af_draw_scatter_nd(const af_window wind, const af_array P, const af_marker_type marker, const af_cell* const props);
af_err af_draw_scatter_2d(const af_window wind, const af_array X, const af_array Y,const af_marker_type marker, const af_cell* const props);
af_err af_draw_scatter_3d(const af_window wind, const af_array X, const af_array Y, const af_array Z, const af_marker_type marker, const af_cell* const props);
af_err af_draw_hist(const af_window wind, const af_array X, const double minval, const double maxval, const af_cell* const props);
af_err af_draw_surface(const af_window wind, const af_array xVals, const af_array yVals, const af_array S, const af_cell* const props);
af_err af_draw_vector_field_nd(const af_window wind, const af_array points, const af_array directions, const af_cell* const props);
af_err af_draw_vector_field_3d(const af_window wind, const af_array xPoints, const af_array yPoints, const af_array zPoints, const af_array xDirs, const af_array yDirs, const af_array zDirs, const af_cell* const props);
af_err af_draw_vector_field_2d(const af_window wind,const af_array xPoints, const af_array yPoints,const af_array xDirs, const af_array yDirs,const af_cell* const props);
af_err af_grid(const af_window wind, const int rows, const int cols);
af_err af_set_axes_limits_compute(const af_window wind, const af_array x, const af_array y, const af_array z,const bool exact, const af_cell* const props);
af_err af_set_axes_limits_2d(const af_window wind, const float xmin, const float xmax, const float ymin, const float ymax, const bool exact, const af_cell* const props);
af_err af_set_axes_limits_3d(const af_window wind, const float xmin, const float xmax, const float ymin, const float ymax, const float zmin, const float zmax, const bool exact, const af_cell* const props);
af_err af_set_axes_titles(const af_window wind, const char * const xtitle, const char * const ytitle, const char * const ztitle, const af_cell* const props);
af_err af_show(const af_window wind);
af_err af_is_window_closed(bool *out, const af_window wind);
af_err af_set_visibility(const af_window wind, const bool is_visible);
af_err af_destroy_window(const af_window wind);